estructura vista controlador en las carpetas

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_lugar"
+            android:id="@+id/nav_auto"
             android:icon="@drawable/ic_carro"
             android:title="@string/menu_auto" />
         <item
