--- a/app/src/main/res/layout/fragment_servicio.xml
+++ b/app/src/main/res/layout/fragment_servicio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auto.AutoFragment">
+    tools:context=".ui.servicio.ServicioFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/bt_add_servicio_fab"
