--- a/app/src/main/res/layout/servicio_fila.xml
+++ b/app/src/main/res/layout/servicio_fila.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_nombre"
+            android:id="@+id/tv_Descripcion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -28,13 +28,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_fecha"
+            android:id="@+id/tv_Celular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="TextView"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
+            app:layout_constraintTop_toBottomOf="@+id/tv_Descripcion"
             tools2:layout_editor_absoluteX="140dp" />
 
         <TextView
@@ -44,8 +44,8 @@
             android:layout_marginTop="24dp"
             android:text="TextView"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/tv_fecha"
-            app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />
+            app:layout_constraintStart_toStartOf="@+id/tv_Celular"
+            app:layout_constraintTop_toBottomOf="@+id/tv_Celular" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
